# databricks-mcp

./: .gitignore  .mcp.json.dist  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/databricks_mcp/: __init__.py  client.py  server.py
tests/: test_client.py
